// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> renders correctly 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with badge custom color: Using badge custom color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with badge default color: Using badge default color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with image and badge custom color: Using image and badge custom color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with image and badge default color: Using image and badge default color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with image: Using image 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with initials and badge custom color: Using initials and badge custom color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <div
      aria-label="John Doe"
      class="chakra-avatar__initials css-0"
      role="img"
    >
      JD
    </div>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with initials and badge default color: Using initials and badge default color 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <div
      aria-label="John Doe"
      class="chakra-avatar__initials css-0"
      role="img"
    >
      JD
    </div>
    <div
      class="chakra-avatar__badge css-j2wqwy"
    />
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with initials: Using initials 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <div
      aria-label="John Doe"
      class="chakra-avatar__initials css-0"
      role="img"
    >
      JD
    </div>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with isLoading: Using isLoading 1`] = `
<DocumentFragment>
  <div
    class="chakra-skeleton css-1kgvji0"
  />
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size 2xl: Using size 2xl 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size 2xs: Using size 2xs 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size 3xl: Using size 3xl 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size lg: Using size lg 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size md: Using size md 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size sm: Using size sm 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size xl: Using size xl 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`<Avatar /> renders correctly with size xs: Using size xs 1`] = `
<DocumentFragment>
  <span
    class="chakra-avatar css-1ruhx4w"
  >
    <svg
      aria-label=" avatar"
      class="chakra-icon css-13otjrl"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;
